<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ease_mm_listitem_grey"
                tools:ignore="ContentDescription,Overdraw,RelativeOverlap,RtlHardcoded,RtlSymmetry">

    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="@dimen/height_row_weixin"
        android:layout_height="@dimen/height_row_weixin"
        android:layout_marginLeft="@dimen/lay_10"
        android:padding="@dimen/lay_5"
        android:src="@drawable/ease_default_avatar"/>
    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/image_avatar"
        android:layout_toRightOf="@+id/image_avatar"
        android:paddingTop="@dimen/lay_5"
        tools:text="用户名"/>
    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/image_avatar"
        android:layout_toEndOf="@+id/image_avatar"
        android:layout_toRightOf="@+id/image_avatar"
        android:paddingBottom="@dimen/lay_5"
        android:text="@string/hx_contact_invitation_reason"/>
    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/lay_20"
        android:visibility="gone"
        tools:text="@string/hx_contact_invitation_agreed"/>
    <Button
        android:id="@+id/button_refuse"
        style="@style/InvitationButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/lay_20"
        android:layout_marginLeft="@dimen/lay_10"
        android:textColor="@color/colorAccent"
        android:text="@string/hx_contact_invitation_refuse"/>
    <Button
        android:id="@+id/button_agree"
        style="@style/InvitationButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/button_refuse"
        android:layout_toStartOf="@+id/button_refuse"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/hx_contact_invitation_agree"/>

</RelativeLayout>